# C3

./: CMakeLists.txt  README.md  searching.cpp
Search_algorithms/: test_code.cpp
Search_algorithms/Binary_search/: binary-search.cpp
Search_algorithms/Sequential_search/: README.md  sequential-search.cpp
Search_algorithms/Serial_search/: vectorAlgorithms.hpp
Search_algorithms/includes/: vectorAlgorithms.hpp
include/: functionArray.hpp
pointer_with_time/: CMakeLists.txt
pointer_with_time/include/: countTime.hpp
pointer_with_time/src/: a.out  probandoCountTime.cpp  pruebaPunteroFunc.cpp
searching/: README.md  burbujaVector.cpp
searching/include/: functionArray.hpp
searching/src/: .functionArray.cpp.swp  functionArray.cpp  usingFuctionArray.cpp
src/: .usingFuctionArray.cpp.swp  functionArray.cpp  usingFuctionArray.cpp
